fix header on media 1199px and fix the footer on mobile with accordion and icons

--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -611,6 +611,30 @@ header.active{
     -webkit-appearance: none !important;
 	font-family: $mm-icons;
 }
+.subscription-button{
+	position: absolute;
+    right: 10px;
+    top: 15px;
+    color: #000;
+	background-color: rgba(0, 0, 0, 0);
+    border: 0;
+	outline: none;
+	font-family: $mm-icons;
+    cursor: pointer;
+	.submit-txt{
+		position: absolute;
+		width: 1px;
+		height: 1px;
+		padding: 0;
+		overflow: hidden;
+		clip: rect(0, 0, 0, 0);
+		white-space: nowrap;
+		border: 0;
+	}
+}
+.subscription-button::before{
+    content: "\E003";
+}
 
 .check-policy{
 	font-family: $Rutan-Light, sans-serif;
